--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <main>
         
         <nav class="iniNav">
-
-            nav
-
+            <h1>NA</h1>
+            <ul>
+                <li><a href="index.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li><a href="index.html"><img src="/projects logo.svg" alt="projects"></a></li>
+                <li><a href="index.html" ><img src="/githubBlack.png" alt="github"></a></li>
+            </ul>
         </nav>
        <!--<h1>Headline</h1> --> 
     </main>
