--- a/wireframes/projects.html
+++ b/wireframes/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,12 +11,16 @@
         
         <nav class="projectsNav">
             <h1>NA</h1>
-
+            <ul>
+                <li><a href="index.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li><a href="index.html"><img src="/projects logo.svg" alt="projects"></a></li>
+                <li><a href="index.html" ><img src="/githubBlack.png" alt="github"></a></li>
+            </ul>
         </nav>
         <section class="projects">
             <h2>projects</h2>
-            <section class="projectEx">projects</section>
-            <p>paragraph section</p>
+            <img class="projectsImg" src="/windowExample.png">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo exercitationem incidunt doloribus quod accusantium magnam sapiente reprehenderit repudiandae, minima vero rerum quos! Sequi neque, nobis sapiente eum libero laborum cumque.</p>
         </section>
        
     </main>
