added links to the wireframes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <main>
         
         <nav class="iniNav">
-
-            nav
+            <h1>NAV</h1>
+            <ul>
+                <li><a href="/wireframes/about.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li><a href="/wireframes/projects.html"><img src="/projects logo.svg" alt="projects"></a></li>
+                <li><a href="https://github.com/anguianoo" ><img src="/githubBlack.png" alt="github"></a></li>
+            </ul>
 
         </nav>
        <!--<h1>Headline</h1> --> 
