--- a/wireframes/about.html
+++ b/wireframes/about.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <nav class="aboutNav">
-            <h1 class="aboutMeNa">nav</h1>
+            <h1 class="aboutMeNa"><a href="/index.html" >nav</a></h1>
 
         </nav>
         <h1 class="about">h1</h1>
