--- a/wireframes/projects.html
+++ b/wireframes/projects.html
@@ -10,7 +10,7 @@
     <main>
         
         <nav class="projectsNav">
-            <h1>NA</h1>
+            <a href="/index.html" >nav</a>
 
         </nav>
         <section class="projects">
