--- a/wireframes/about.html
+++ b/wireframes/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="../main.css">
     <title>About</title>
 </head>
 <body>
     <main>
         <nav class="aboutNav">
-            <h1 class="aboutMeNa"><a href="/index.html" >nav</a></h1>
+            <h1 class="aboutMeNa"><a href="../index.html" >nav</a></h1>
 
         </nav>
         <h1 class="about">h1</h1>
