--- a/wireframes/projects.html
+++ b/wireframes/projects.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="../main.css">
     <title>Document</title>
 </head>
 <body>
     <main>
         
         <nav class="projectsNav">
-            <a href="/index.html" >nav</a>
+            <a href="../index.html" >nav</a>
 
         </nav>
         <section class="projects">
