--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="iniNav">
             <h1>NAV</h1>
             <ul>
-                <li><a href="/wireframes/about.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li><a href="wireframes/about.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
                 <li><a href="/wireframes/projects.html"><img src="/projects logo.svg" alt="projects"></a></li>
                 <li><a href="https://github.com/anguianoo" ><img src="/githubBlack.png" alt="github"></a></li>
             </ul>
