--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 <body>
     <main>
         
-        <nav class="iniNav">
+        <nav class="nav">
             <h1>NA</h1>
             <ul>
-                <li><a href="index.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
-                <li><a href="index.html"><img src="/projects logo.svg" alt="projects"></a></li>
-                <li><a href="index.html" ><img src="/githubBlack.png" alt="github"></a></li>
+                <li class="aboutme link"><a href="" ><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li  class="projects link"><a href=""><img  src="/projects logo.svg" alt="projects"></a></li>
+                <li><a href="https://github.com/anguianoo" ><img src="/githubBlack.png" alt="github"></a></li>
             </ul>
         </nav>
-       <!--<h1>Headline</h1> --> 
+  <div class="about-page"></div>
+  <div class="projects-page"></div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<script src="index.js"></script>
     </main>
 </body>
 </html>
