--- a/aboutme.html
+++ b/aboutme.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Anguiano</title>
+    <title>About Me</title>
 </head>
 <body>
     <main>
-               <nav class="nav">
-                <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
+        <nav class="topnav">
+            <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
                 
                 <li class="aboutme link" id="0"><a href="aboutme.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
                 <li class="projects link" id="1"><a href="projects.html"><img src="/projects logo.svg" alt="projects"></a></li>
                 <li><a href="https://github.com/anguianoo" target="_blank"><img src="/githubBlack.png" alt="github"></a></li>
             </ul>
-
         </nav>
-
-<footer>
-    <a class="footer" href="mailto:njanguiano@gmail.com">email me</a>
-</footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-      <script src="index.js"></script>
+        <h1 class="about">This is me</h1>
+                    <section class="bio">
+                         <p>When I am not coding, I am most likely pc gaming,
+                         skateboarding, doing digital art, or reading the Bible. 
+                         I find web development interesting because 
+                         I love to take on challenges as it excites me.
+                         </p>
+                    </section>
     </main>
+    
 </body>
 </html>
