--- a/aboutme.html
+++ b/aboutme.html
@@ -25,6 +25,9 @@
                          I love to take on challenges as it excites me.
                          </p>
                     </section>
+                    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                    crossorigin="anonymous"></script>
+                  <script src="index.js"></script>
     </main>
     
 </body>
