--- a/projects.html
+++ b/projects.html
@@ -18,14 +18,29 @@
         </nav>
         <section class="projects">
             <h2>projects</h2>
-            <img class="projectsImg" src="/windowExample.png">
+            <div class="my-custom-scrollbar my-custom-scrollbar-primary">
+                <ul>
+                    <li> <img class="projectsImg" src="/start-page.png"></li>
+                    <li> <img class="projectsImg" src="/question-page.png"></li>
+                </ul>
+
+              </div>
+
+
+
+           
             <p class="projects-paragragh">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quo exercitationem incidunt doloribus quod accusantium magnam sapiente
-                 reprehenderit repudiandae, minima vero rerum quos! Sequi neque, nobis 
-                 sapiente eum libero laborum cumque.
+                This project is a simple quiz app i made through Thinkful.
             </p>
+            <ul class="repo-and-livepage">
+                <li><a href="https://github.com/anguianoo/mathQuiz" target="_blank">Repo</a></li>
+                <li><a href="https://anguianoo.github.io/mathQuiz/" target="_blank">Live Page</a></li>
+            </ul>
+            
         </section>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+      <script src="index.js"></script>
     </main>
 </body>
 </html>
