--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
                 
-                <li class="aboutme link" id="0"><a href="aboutme.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
-                <li class="projects link" id="1"><a href="projects.html"><img src="/projects logo.svg" alt="projects"></a></li>
-                <li><a href="https://github.com/anguianoo" target="_blank"><img src="/githubBlack.png" alt="github"></a></li>
+                <li class="aboutme link" id="0"><a href="aboutme.html"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="projects link" id="1"><a href="projects.html"><img src="projects logo.svg" alt="projects"></a></li>
+                <li><a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github"></a></li>
             </ul>
 
         </nav>
