--- a/projects.html
+++ b/projects.html
@@ -11,17 +11,17 @@
         <nav class="topnav">
             <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
-                <li class="aboutme link" id="0"><a href="aboutme.html"><img src="/avatar-icon-png-6.png" alt="about me"></a></li>
-                <li class="projects link" id="1"><a href="projects.html"><img src="/projects logo.svg" alt="projects"></a></li>
-                <li><a href="https://github.com/anguianoo" target="_blank" ><img src="/githubBlack.png" alt="github"></a></li>
+                <li class="aboutme link" id="0"><a href="aboutme.html"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="projects link" id="1"><a href="projects.html"><img src="projects logo.svg" alt="projects"></a></li>
+                <li><a href="https://github.com/anguianoo" target="_blank" ><img src="githubBlack.png" alt="github"></a></li>
             </ul>
         </nav>
         <section class="projects">
             <h2>projects</h2>
             <div class="my-custom-scrollbar my-custom-scrollbar-primary">
                 <ul>
-                    <li> <img class="projectsImg" src="/start-page.png"></li>
-                    <li> <img class="projectsImg" src="/question-page.png"></li>
+                    <li> <img class="projectsImg" src="start-page.png"></li>
+                    <li> <img class="projectsImg" src="question-page.png"></li>
                 </ul>
 
               </div>
