--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         </nav>
         <section class="projects">
             <h2>projects</h2>
-            <div class="my-custom-scrollbar my-custom-scrollbar-primary">
+            <div class="my-custom-scrollbar">
                 <ul>
                     <li> <img class="projectsImg" src="start-page.png"></li>
                     <li> <img class="projectsImg" src="question-page.png"></li>
@@ -40,8 +40,7 @@
             </ul>
             
         </section>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="index.js"></script>
     </main>
 </body>
