--- a/aboutme.html
+++ b/aboutme.html
@@ -27,9 +27,8 @@
                          I love to take on challenges as it excites me.
                          </p>
                     </section>
-                    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                    crossorigin="anonymous"></script>
-                  <script src="index.js"></script>
+<!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+<!--        <script src="index.js"></script>-->
     </main>
     
 </body>
