--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 <footer>
     <a class="footer" href="mailto:njanguiano@gmail.com">email me</a>
 </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-      <script src="index.js"></script>
+<!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+<!--        <script src="index.js"></script>-->
     </main>
 </body>
 </html>
