--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <main>
+
                <nav class="nav">
                 <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
                 <li class="aboutme link" id="0"><a href="aboutme.html"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
                 <li class="projects link" id="1"><a href="projects.html"><img src="projects-logo.svg" alt="projects"></a></li>
+                <li><a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png"></a></li>
                 <li><a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github"></a></li>
             </ul>
 
         </nav>
 
-<footer>
-    <a class="footer" href="mailto:njanguiano@gmail.com">email me</a>
-</footer>
+
 <!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
 <!--        <script src="index.js"></script>-->
     </main>
