--- a/aboutme.html
+++ b/aboutme.html
@@ -11,12 +11,32 @@
         <nav class="topnav">
             <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
-                
-                <li class="aboutme link" id="0"><a href="aboutme.html"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="aboutme link" id="0"><a href="aboutme.html" alt="about me link"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="projects link" id="1"><a href="projects.html" alt="projects link"><img src="projects-logo.svg" alt="projects"></a></li>
 
-                <li class="projects link" id="1"><a href="projects.html"><img src="projects-logo.svg" alt="projects"></a></li>
+                <!--                <li>contact me</li>-->
+                <!--                <div class="dropdown-content">-->
+                <!--                    <a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png">-->
+                <!--                        <a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github">-->
+                <!--                </div>-->
+                <!--                <li>-->
+                <li class="">
+                    <div class="dropdown">
+                        <button class="dropbtn"> <img src="contact-me.svg">
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a class="email link" href="mailto:njanguiano@gmail.com" alt="email link"><img src="e.png" alt="a picture of an email"> </a>
+                            <a href="https://github.com/anguianoo" target="_blank" alt="github link"><img src="githubBlack.png" alt="github image"></a>
 
-                <li><a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github"></a></li>
+                        </div>
+                    </div>
+                </li>
+
+                <!--                </li>-->
+
+                <!--                <li><a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png"></a></li> -->
+                <!--                <li><a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github"></a></li> -->
             </ul>
         </nav>
         <h1 class="about">This is me</h1>
