--- a/projects.html
+++ b/projects.html
@@ -11,19 +11,40 @@
         <nav class="topnav">
             <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
-                <li class="aboutme link" id="0"><a href="aboutme.html"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="aboutme link" id="0"><a href="aboutme.html" alt="about me link"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="projects link" id="1"><a href="projects.html" alt="projects link"><img src="projects-logo.svg" alt="projects"></a></li>
 
-                <li class="projects link" id="1"><a href="projects.html"><img src="projects-logo.svg" alt="projects"></a></li>
+                <!--                <li>contact me</li>-->
+                <!--                <div class="dropdown-content">-->
+                <!--                    <a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png">-->
+                <!--                        <a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github">-->
+                <!--                </div>-->
+                <!--                <li>-->
+                <li class="">
+                    <div class="dropdown">
+                        <button class="dropbtn"> <img src="contact-me.svg">
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a class="email link" href="mailto:njanguiano@gmail.com" alt="email link"><img src="e.png" alt="a picture of an email"> </a>
+                            <a href="https://github.com/anguianoo" target="_blank" alt="github link"><img src="githubBlack.png" alt="github image"></a>
 
-                <li><a href="https://github.com/anguianoo" target="_blank" ><img src="githubBlack.png" alt="github"></a></li>
+                        </div>
+                    </div>
+                </li>
+
+                <!--                </li>-->
+
+                <!--                <li><a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png"></a></li> -->
+                <!--                <li><a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github"></a></li> -->
             </ul>
         </nav>
         <section class="projects">
             <h2>projects</h2>
             <div class="my-custom-scrollbar">
                 <ul>
-                    <li> <img class="projectsImg" src="start-page.png"></li>
-                    <li> <img class="projectsImg" src="question-page.png"></li>
+                    <li> <img class="projectsImg" src="start-page.png" alt="project image"></li>
+                    <li> <img class="projectsImg" src="question-page.png" alt="project image 2"></li>
                 </ul>
 
               </div>
@@ -32,7 +53,8 @@
 
            
             <p class="projects-paragragh">
-                This project is a simple quiz app i made through Thinkful.
+                This project is a simple quiz app I made through Thinkful. It was to be 5 questions long, and have a score/question section.<br>
+                the user clicks on the box that displays the correct answer. Based on the selection, the quiz will tell the user if its correct or not.
             </p>
             <ul class="repo-and-livepage">
                 <li><a href="https://github.com/anguianoo/mathQuiz" target="_blank">Repo</a></li>
