--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <main>
 
                <nav class="nav">
-                <h1 class="anguiano"></h1><a class="anguiano" href="index.html" >Anguiano</a></h1>
+                <h1 class="anguiano"><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
-                <li class="aboutme link" id="0"><a href="aboutme.html" alt="about me link"><img src="avatar-icon-png-6.png" alt="about me"></a></li>
-                <li class="projects link" id="1"><a href="projects.html" alt="projects link"><img src="projects-logo.svg" alt="projects"></a></li>
+                <li class="aboutme link" id="0"><a href="aboutme.html" ><img src="avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="projects link" id="1"><a href="projects.html" ><img src="projects-logo.svg" alt="projects"></a></li>
 
 <!--                <li>contact me</li>-->
 <!--                <div class="dropdown-content">-->
@@ -23,12 +23,12 @@
 <!--                <li>-->
                 <li class="">
                     <div class="dropdown">
-                        <button class="dropbtn"> <img src="contact-me.svg">
+                        <button class="dropbtn"> <img src="contact-me.svg" alt="contact me">
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a class="email link" href="mailto:njanguiano@gmail.com" alt="email link"><img src="e.png" alt="a picture of an email"> </a>
-                            <a href="https://github.com/anguianoo" target="_blank" alt="github link"><img src="githubBlack.png" alt="github image"></a>
+                            <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="e.png" alt="email"> </a>
+                            <a href="https://github.com/anguianoo" target="_blank" ><img src="githubBlack.png" alt="github image"></a>
 
                         </div>
                     </div>
