moved images to IMG, landing page now about me

--- a/index.html
+++ b/index.html
@@ -4,47 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Anguiano</title>
+    <title>About Me</title>
 </head>
 <body>
     <main>
-
-               <nav class="nav">
-                <h1 class="anguiano"><a class="anguiano" href="index.html" >Anguiano</a></h1>
+        <nav class="topnav">
+            <h1 class="anguiano"><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
-                <li class="aboutme link" id="0"><a href="aboutme.html" ><img src="avatar-icon-png-6.png" alt="about me"></a></li>
-                <li class="projects link" id="1"><a href="projects.html" ><img src="projects-logo.svg" alt="projects"></a></li>
+                <li class="aboutme link" id="0"><a href="aboutme.html" ><img src="IMG/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="projects link" id="1"><a href="projects.html" ><img src="IMG/projects-logo.svg" alt="projects"></a></li>
 
-<!--                <li>contact me</li>-->
-<!--                <div class="dropdown-content">-->
-<!--                    <a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png">-->
-<!--                        <a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github">-->
-<!--                </div>-->
-<!--                <li>-->
+                <!--                <li>contact me</li>-->
+                <!--                <div class="dropdown-content">-->
+                <!--                    <a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png">-->
+                <!--                        <a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github">-->
+                <!--                </div>-->
+                <!--                <li>-->
                 <li class="">
                     <div class="dropdown">
-                        <button class="dropbtn"> <img src="contact-me.svg" alt="contact me">
+                        <button class="dropbtn"> <img src="IMG/contact-me.svg" alt="contact me">
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="e.png" alt="email"> </a>
-                            <a href="https://github.com/anguianoo" target="_blank" ><img src="githubBlack.png" alt="github image"></a>
-
+                            <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="IMG/e.png" alt="email"> </a>
+                            <a href="https://github.com/anguianoo" target="_blank" ><img src="IMG/githubBlack.png" alt="github image"></a>
+                            <a href="https://www.linkedin.com/in/norberto-anguiano-a45500a9/" target="_blank"><img src="IMG/linkedIn.png" alt="linkedin"> </a>
                         </div>
                     </div>
                 </li>
 
-<!--                </li>-->
+                <!--                </li>-->
 
-<!--                <li><a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png"></a></li> -->
-<!--                <li><a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github"></a></li> -->
+                <!--                <li><a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png"></a></li> -->
+                <!--                <li><a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github"></a></li> -->
             </ul>
-
         </nav>
+        <div class="about-section">
+            <h1 class="about">This is me</h1>
+            <div class="bio">
+                 <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems.I love working with people because it makes completing projects fun.
+                 </p>
+            </div>
 
-
+        </div>
 <!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
 <!--        <script src="index.js"></script>-->
     </main>
+    
 </body>
 </html>
