--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
         <nav class="topnav">
             <h1 class="anguiano"><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
-                <li class="aboutme link" id="0"><a href="aboutme.html" ><img src="avatar-icon-png-6.png" alt="about me"></a></li>
-                <li class="projects link" id="1"><a href="projects.html" ><img src="projects-logo.svg" alt="projects"></a></li>
+                <li class="aboutme link" id="0"><a href="aboutme.html" ><img src="IMG/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="projects link" id="1"><a href="projects.html" ><img src="IMG/projects-logo.svg" alt="projects"></a></li>
 
                 <!--                <li>contact me</li>-->
                 <!--                <div class="dropdown-content">-->
@@ -22,13 +22,13 @@
                 <!--                <li>-->
                 <li class="">
                     <div class="dropdown">
-                        <button class="dropbtn"> <img src="contact-me.svg" alt="contact me">
+                        <button class="dropbtn"> <img src="IMG/contact-me.svg" alt="contact me">
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="e.png" alt="email"> </a>
-                            <a href="https://github.com/anguianoo" target="_blank" ><img src="githubBlack.png" alt="github image"></a>
-
+                            <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="IMG/e.png" alt="email"> </a>
+                            <a href="https://github.com/anguianoo" target="_blank" ><img src="IMG/githubBlack.png" alt="github image"></a>
+                            <a href="https://www.linkedin.com/in/norberto-anguiano-a45500a9/" target="_blank"><img src="IMG/linkedIn.png" alt="linkedin"> </a>
                         </div>
                     </div>
                 </li>
@@ -43,19 +43,20 @@
             <h2>projects</h2>
             <div class="my-custom-scrollbar">
                 <ul>
-                    <li> <img class="projectsImg" src="start-page.png" alt="project image"></li>
-                    <li> <img class="projectsImg" src="question-page.png" alt="project image 2"></li>
+                    <li> <img class="projectsImg" src="IMG/start-page.png" alt="project image"></li>
+                    <li> <img class="projectsImg" src="IMG/question-page.png" alt="project image 2"></li>
                 </ul>
 
               </div>
 
 
 
-           
+           <h1 class="project-title">Quiz App</h1>
             <p class="projects-paragragh">
-                This project is a simple quiz app I made through Thinkful. It was to be 5 questions long, and have a score/question section.<br>
-                the user clicks on the box that displays the correct answer. Based on the selection, the quiz will tell the user if its correct or not.
+                I created this project to challenge my jquery skills. This project is a simple quiz app I made through Thinkful. It was to be 5 questions long, and have a score/question section.<br>
+                I click on the box that displays the correct answer. Based on the selection, the quiz will tell me if the answer chosen is correct or not.
             </p>
+            <p>Tech stack: HTML, CSS, and JavaScript</p>
             <ul class="repo-and-livepage">
                 <li><a href="https://github.com/anguianoo/mathQuiz" target="_blank">Repo</a></li>
                 <li><a href="https://anguianoo.github.io/mathQuiz/" target="_blank">Live Page</a></li>
