changed landing page

--- a/aboutme.html
+++ b/aboutme.html
@@ -40,10 +40,10 @@
             </ul>
         </nav>
         <div class="about-section">
-            <img src="" alt="image of norberto anguiano">
+            <img class="about-img" src="IMG/picture-of-me.jpg" alt="image of norberto anguiano">
             <h1 class="about">Norberto Anguiano</h1>
             <div class="bio">
-                 <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems.I love working with people because it makes completing projects fun.
+                 <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems. When working with people I get excited because I get to hear their ideas and share mine.
                  </p>
             </div>
 
