--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             </ul>
         </nav>
         <div class="about-section">
+            <img class="about-img" src="IMG/picture-of-me.jpg" alt="image of norberto anguiano">
+
             <h1 class="about">This is me</h1>
             <div class="bio">
                  <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems.I love working with people because it makes completing projects fun.
