changed landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>About Me</title>
+    <title>Norberto Anguiano</title>
 </head>
 <body>
     <main>
@@ -42,11 +42,11 @@
         <div class="about-section">
             <img class="about-img" src="IMG/picture-of-me.jpg" alt="image of norberto anguiano">
 
-            <h1 class="about">This is me</h1>
+            <h1 class="about">Norberto Anguiano</h1>
             <div class="bio">
-                 <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems.I love working with people because it makes completing projects fun.
-                 </p>
-            </div>
+                <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems. When working with people I get excited because I get to hear their ideas and share mine.
+                </p>
+           </div>
 
         </div>
 <!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
