--- a/projects.html
+++ b/projects.html
@@ -9,29 +9,33 @@
 <body>
     <main>
         <nav class="topnav">
-            <h1 class="anguiano"><a class="anguiano" href="index.html" >Anguiano</a></h1>
-            <ul>
-                <li class="aboutme link" id="0"><a href="aboutme.html" ><img src="IMG/avatar-icon-png-6.png" alt="about me"></a></li>
-                <li class="projects link" id="1"><a href="projects.html" ><img src="IMG/projects-logo.svg" alt="projects"></a></li>
-
-                <!--                <li>contact me</li>-->
-                <!--                <div class="dropdown-content">-->
-                <!--                    <a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png">-->
-                <!--                        <a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github">-->
-                <!--                </div>-->
-                <!--                <li>-->
-                <li class="">
-                    <div class="dropdown">
-                        <button class="dropbtn"> <img src="IMG/contact-me.svg" alt="contact me">
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="IMG/e.png" alt="email"> </a>
-                            <a href="https://github.com/anguianoo" target="_blank" ><img src="IMG/githubBlack.png" alt="github image"></a>
-                            <a href="https://www.linkedin.com/in/norberto-anguiano-a45500a9/" target="_blank"><img src="IMG/linkedIn.png" alt="linkedin"> </a>
+            <div class="dropdown2">
+            <button class="anguiano dropbtn"><h1 class="anguiano" >Anguiano</h1> <i class="fa fa-caret-down"></i></button>
+            <div class="dropdown-content2">
+                <ul>
+                    <li class="aboutme link" id="0"><a href="index.html" ><img src="IMG/avatar-icon-png-6.png" alt="about me"></a></li>
+                    <li class="projects link" id="1"><a href="projects.html" ><img src="IMG/projects-logo.svg" alt="projects"></a></li>
+    
+                    <!--                <li>contact me</li>-->
+                    <!--                <div class="dropdown-content">-->
+                    <!--                    <a class="email link" href="mailto:njanguiano@gmail.com"><img src="e.png">-->
+                    <!--                        <a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github">-->
+                    <!--                </div>-->
+                    <!--                <li>-->
+                    <li>
+                        <div class="dropdown">
+                            <button class="dropbtn"> <img src="IMG/contact-me.svg" alt="contact me">
+                                <i class="fa fa-caret-down"></i>
+                            </button>
+                            <div class="dropdown-content">
+                                <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="IMG/e.png" alt="email"> </a>
+                                <a href="https://github.com/anguianoo" target="_blank" ><img src="IMG/githubBlack.png" class="github-logo"  alt="github image"></a>
+                                <a href="https://www.linkedin.com/in/norberto-anguiano-a45500a9/" target="_blank"><img src="IMG/linkedIn.png" alt="linkedin"> </a>
+                            </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
+    
+            </div>
 
                 <!--                </li>-->
 
