--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
         <nav class="topnav">
             <h1 class="anguiano"><a class="anguiano" href="index.html" >Anguiano</a></h1>
             <ul>
-                <li class="aboutme link" id="0"><a href="aboutme.html" ><img src="IMG/avatar-icon-png-6.png" alt="about me"></a></li>
+                <li class="aboutme link" id="0"><a href="index.html" ><img src="IMG/avatar-icon-png-6.png" alt="about me"></a></li>
                 <li class="projects link" id="1"><a href="projects.html" ><img src="IMG/projects-logo.svg" alt="projects"></a></li>
 
                 <!--                <li>contact me</li>-->
