made changes from graders comments

--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
                 <!--                        <a href="https://github.com/anguianoo" target="_blank"><img src="githubBlack.png" alt="github">-->
                 <!--                </div>-->
                 <!--                <li>-->
-                <li class="">
+                <li>
                     <div class="dropdown">
                         <button class="dropbtn"> <img src="IMG/contact-me.svg" alt="contact me">
                             <i class="fa fa-caret-down"></i>
@@ -43,7 +43,9 @@
             <img class="about-img" src="IMG/picture-of-me.jpg" alt="image of norberto anguiano">
             <h1 class="about">Norberto Anguiano</h1>
             <div class="bio">
-                 <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems. When working with people I get excited because I get to hear their ideas and share mine.
+                 <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. 
+                     I enjoy Web development because I love creating clean, beautiful and intuitive designs.
+                     Sharing ideas and giving feedback with others helps make projects engaging  and exciting. 
                  </p>
             </div>
 
