--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             </button>
                             <div class="dropdown-content">
                                 <a class="email link" href="mailto:njanguiano@gmail.com" ><img src="IMG/e.png" alt="email"> </a>
-                                <a href="https://github.com/anguianoo" target="_blank" ><img src="IMG/githubBlack.png" alt="github image"></a>
+                                <a href="https://github.com/anguianoo" target="_blank" ><img src="IMG/githubBlack.png" class="github-logo"  alt="github image"></a>
                                 <a href="https://www.linkedin.com/in/norberto-anguiano-a45500a9/" target="_blank"><img src="IMG/linkedIn.png" alt="linkedin"> </a>
                             </div>
                         </div>
