made changes from graders comments

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             </div>
             <h1 class="about">Norberto Anguiano</h1>
             <div class="bio">
-                <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. web development is captivating because it satisfies my interest in solving problems. When working with people I get excited because I get to hear their ideas and share mine.
+                <p>When I am not coding, I am most likely pc gaming, skateboarding, doing digital art, or reading the Bible. 
+                    I enjoy Web development because I love creating clean, beautiful and intuitive designs.
+                    Sharing ideas and giving feedback with others helps make projects engaging  and exciting. 
                 </p>
            </div>
 </div>
